# cslog

./: .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
include/: logging.hpp
scripts/: publish-doxygen.sh
src/: logging.cpp
test/: logging.cpp
